# hermes-subagent-coder

./: .gitignore  README.md  __init__.py  coder_config.py  coder_event_bus.py  coder_orchestration.py  coder_progress_formatter.py  coder_roles.py  codex_exec_client.py  codex_provider.py  config.py  delegate_background.py  discord_overlay.py  event_bus.py  orchestration.py  plugin.yaml  pyproject.toml  scan_pii_tool.py  sessions.py
docs/superpowers/plans/: 2026-06-15-coder-orchestration.md
docs/superpowers/specs/: 2026-06-09-coder-orchestration-design.md
tests/: conftest.py  test_agent_company_aux.py  test_child_wraps.py  test_coder_child_wraps.py  test_coder_discord_overlay.py  test_coder_gateway_spawn.py  test_coder_orchestration_status.py  test_coder_orchestration_wake.py  test_coder_roles.py  test_coder_run_agent_wraps.py  test_coder_toolset_membership.py  test_discord_overlay.py  test_dispatch.py  test_gateway_spawn.py  test_orchestration_status.py  test_orchestration_wake.py  test_progress_visibility.py  test_provider.py  test_roles.py  test_run_agent_wraps.py  test_scan_pii.py  test_skeleton.py  test_subagent_coder_aux.py  test_subagent_coder_dispatch.py  test_subagent_coder_provider.py  test_subagent_coder_skeleton.py  test_tester_reviewer_roles.py  test_toolset_membership.py
